# node-fuzzer

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  README.md  RPC_FUZZER.md  advertise_flood.conf  badnode_default.conf  current_branch_flood.conf  default_no_blockmap.conf  deploy.sh  handshake_fuzz.conf  identities.json  nack_flood.conf  p2p_fuzzer_default.conf  peermsg_no_blockmap.conf  peermsg_no_blockmap_incomplete.conf  supervisord.conf  test.conf
.github/workflows/: build.yml  clippy.yml  rustfmt.yml
apps/deploy_monitoring/: Cargo.toml  docker-compose.deploy.latest.yml  docker-compose.localhost.yml
apps/deploy_monitoring/src/: configuration.rs  constants.rs  deploy_with_compose.rs  image.rs  main.rs  node.rs  slack.rs
badnode/: Cargo.toml
crypto/: Cargo.toml
crypto/src/: base58.rs  blake2b.rs  crypto_box.rs  hash.rs  lib.rs  nonce.rs  proof_of_work.rs  seeded_step.rs
docker/distroless/: Dockerfile  tezedge.config
generator/: Cargo.toml
generator/src/: lib.rs
handshake_fuzz/: Cargo.toml
identity_tool/: Cargo.toml
ipc/: Cargo.toml
ipc/src/: lib.rs
ipc/tests/: test_ipc.rs
light_node/: Cargo.toml
light_node/etc/tezedge/: tezedge.config
light_node/src/: configuration.rs  main.rs
monitoring/src/: monitor.rs
monitoring/src/monitors/: peer_monitor.rs
monitoring/src/websocket/: handler_messages.rs
networking/: Cargo.toml
networking/src/: lib.rs
networking/src/p2p/: mod.rs  network_channel.rs  peer.rs  stream.rs
networking/tests/: stream_reader.rs  stream_writer.rs
new_node/: Cargo.toml
new_node/src/: generator.rs  main.rs
p2p_fuzzer/: Cargo.toml
protocol_runner/: Cargo.toml
protocol_runner/src/: main.rs
rpc/: Cargo.toml
rpc/src/: helpers.rs  lib.rs  rpc_actor.rs
rpc/src/server/: dev_handler.rs  mod.rs  protocol_handler.rs  router.rs  shell_handler.rs
rpc/src/services/: base_services.rs  context.rs  dev_services.rs  mempool_services.rs  stats_services.rs  stream_services.rs
rpc/tests/: integration_tests.rs
rpc_fuzzer/: Cargo.toml
rpc_protocol_schemas/: te-endpoints.json
rpc_shell_schemas/: automaton-openapi.json  rpc-openapi.json  tezedge-openapi.json
sandbox/: Cargo.toml
sandbox/src/: node_runner.rs  tezos_client_runner.rs
scripts/: coverage  coverage_charts.py  coverage_history.py  lcov2kcov.py  lcov2kcov_index.py  report_ocaml.py  restart_fuzz_target  run_fuzz_target  run_fuzzers  tail_process  write_last_commit
shell/: Cargo.toml
shell/src/: chain_current_head_manager.rs  chain_feeder.rs  chain_manager.rs  lib.rs  peer_branch_bootstrapper.rs  peer_manager.rs  shell_channel.rs
shell/src/mempool/: mempool_channel.rs  mempool_prevalidator.rs  mempool_state.rs
shell/src/state/: bootstrap_state.rs  chain_state.rs  data_requester.rs  mod.rs  peer_state.rs  synchronization_state.rs
shell/src/stats/: memory.rs
shell/src/utils/: mod.rs
shell/src/validation/: mod.rs
shell/tests/: actors_apply_blocks_test.rs  chain_test.rs  p2p_test.rs  protocol_runner_test.rs
shell/tests/common/: infra.rs  samples.rs  test_cases_data.rs  test_data.rs  test_node_peer.rs
storage/: Cargo.toml
storage/scripts/: actions_tool.rs  merkle_storage_stats.rs
storage/src/: block_meta_storage.rs  block_storage.rs  chain_meta_storage.rs  context.rs  context_action_storage.rs  kv_store.rs  lib.rs  merkle_storage.rs  operations_meta_storage.rs  operations_storage.rs
storage/tests/: block_header_with_hash.rs  block_storage.rs  context_action_storage.rs  mempool_storage.rs  merkle_storage.rs  operations_storage.rs  sequences.rs  storage_for_shell.rs
tester/: Cargo.toml
tester/src/: buffer.rs  handshake.rs  lib.rs
tezedge_state/src/: peer_address.rs
tezos/api/: Cargo.toml
tezos/client/: Cargo.toml
tezos/encoding/: Cargo.toml
tezos/identity/: Cargo.toml
tezos/interop/: Cargo.toml
tezos/messages/: Cargo.toml
tezos/new_context/: Cargo.toml
tezos/spsc/: Cargo.toml
tezos/wrapper/: Cargo.toml
(+122 files in other folders)
