[package]
name = "generator"
version = "0.0.0"
authors = ["Daniel K <daniel.kuehr@viablesystems.op>"]
edition = "2018"

[dependencies]
rand = "0.8.4"
bytes = "1"
hex = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
crypto = { path = "../crypto" }
tezos_messages = { path = "../tezos/messages" }
