[package]
name = "p2p_fuzzer"
version = "0.1.0"
authors = ["Daniel K <daniel.kuehr@viablesystems.io>"]
edition = "2018"

[dependencies]
fdlimit = { version = "0.2.1" }
futures = { version = "0.3.15" }
tokio = { version = "1.8", features = ["full"] }
structopt = { version = "0.3"}
chrono = { version = "0.4" }
rand = { version = "0.8.4", features = ["small_rng"] }
hex = "0.4"
serde_json = "1.0"
clap = "2.33"
serde = { version = "1.0", features = ["derive", "rc"] }
crypto = { path = "../crypto" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
generator = { path = "../generator" }

[dev-dependencies]
fdlimit = { version = "0.2.1" }
futures = { version = "0.3.15" }
tokio = { version = "1.8", features = ["full"] }
structopt = { version = "0.3"}
chrono = { version = "0.4" }
rand = { version = "0.8.4", features = ["small_rng"] }
hex = "0.4"
serde_json = "1.0"
clap = "2.33"
serde = { version = "1.0", features = ["derive", "rc"] }
crypto = { path = "../crypto" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
generator = { path = "../generator" }
