[package]
name = "rpc_fuzzer"
version = "0.1.0"
authors = ["Daniel K <daniel.kuehr@viablesystems.io>"]
edition = "2018"

[dependencies]
urlencoding = { version = "2.1.0" }
fdlimit = { version = "0.2.1" }
futures = { version = "0.3.15" }
tokio = { version = "1.8", features = ["full"] }
structopt = { version = "0.3"}
chrono = { version = "0.4" }
rand = { version = "0.8.4", features = ["small_rng"] }
hex = "0.4"
serde_json = "1.0"
serde-json-schema = "0.1.0"
clap = "2.33"
serde = { version = "1.0", features = ["derive", "rc"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "stream", "tcp", "runtime"] }

[dev-dependencies]
urlencoding = { version = "2.1.0" }
fdlimit = { version = "0.2.1" }
futures = { version = "0.3.15" }
tokio = { version = "1.8", features = ["full"] }
structopt = { version = "0.3"}
chrono = { version = "0.4" }
rand = { version = "0.8.4", features = ["small_rng"] }
hex = "0.4"
serde_json = "1.0"
serde-json-schema = "0.1.0"
clap = "2.33"
serde = { version = "1.0", features = ["derive", "rc"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "stream", "tcp", "runtime"] }