[package]
name = "tester"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3"}
chrono = { version = "0.4" }
rand = { version = "0.8.4", features = ["small_rng"] }
hex = "0.4"
serde_json = "1.0"
crypto = { path = "../crypto" }
logging = { path = "../logging" }
# tezos_api = { path = "../tezos/api" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
tezos_encoding = { path = "../tezos/encoding" }
# tezos_wrapper = { path = "../tezos/wrapper" }
networking = { path = "../networking" }
generator = { path = "../generator" }

[dev-dependencies]
reqwest = "0.11"
tokio = { version = "1.8", features = ["full"] }
serde_json = "1.0"
crypto = { path = "../crypto" }
logging = { path = "../logging" }
# tezos_api = { path = "../tezos/api" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
tezos_encoding = { path = "../tezos/encoding" }
# tezos_wrapper = { path = "../tezos/wrapper" }
networking = { path = "../networking" }
generator = { path = "../generator" }